update css and html

--- a/index.html
+++ b/index.html
@@ -1,24 +1,66 @@
+<!DOCTYPE html>
 <html>
-    <head>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>tackman.info</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/splendor.css">
+</head>
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    </head>
-    
-    <body>
-        <div class="container">
-        <h1>tackman.info</h1>
-        <p><a href="https://twitter.com/tackman">Twitter</a></p>
-        <p><a href="https://github.com/tackman/">Github</a></p>
-        <p><a href="http://tackman.info/ut-u/">プログラミング言語「うっうー！</a></p>
-        <p><a href="http://civbgeeks.net/">CivBGeeks</a></p>
-        <p><a href="http://tackman.github.io/catantool/catan.html">カタンおやつツール</a></p>
-        </div>
-    </body>
+<body>
+
+</body>
+<h1 id="tackman-info">tackman.info</h1>
+<h3 id="about">About</h3>
+<p>Software engineer / Application developer / Game designer</p>
+<h3 id="personal-works">Personal works</h3>
+<h4 id="-">百合紅 -ゆりくれ-</h4>
+<p>Yuri-Kure, 百合 board game. <a href="https://yurikure.wr-inst.org/">https://yurikure.wr-inst.org/</a></p>
+<p>Game scoring support tool <a href="https://yurikure.wr-inst.org/app/">https://yurikure.wr-inst.org/app/</a></p>
+<h4 id="-">プログラミング言語「うっうー」</h4>
+<p><a href="http://tackman.info/ut-u/">http://tackman.info/ut-u/</a></p>
+<p>An esoteric programming language</p>
+<h3 id="skills">Skills</h3>
+<ul>
+  <li>Application develop, in a broad sence<ul>
+      <li>Including software engineering, marketing and planning</li>
+    </ul>
+  </li>
+  <li>Machine learning / image processing</li>
+  <li>Game design</li>
+</ul>
+<h3 id="social">Social</h3>
+<ul>
+  <li>Mastodon <a href="htts://social.tackman.info/@tackman">@tackman@social.tackman.info</a></li>
+  <li>Twitter <a href="https://twitter.com/tackman/">@tackman</a></li>
+  <li>Github <a href="https://github.com/tackman/">https://github.com/tackman/</a></li>
+</ul>
+<h3 id="circles">Circles</h3>
+<ul>
+  <li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
+  <li><a href="https://off-box.net/">off-box</a> As a game designer and circle administrator</li>
+  <li><a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game Breakers. Participant as a writer.</li>
+  <li><a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of ボードゲームブレイカーズ</li>
+</ul>
+<h3 id="career">Career</h3>
+<ul>
+  <li>I&#39;ve graduated Department of Information and Communication Engineering, Tokyo Univ in 2011.</li>
+  <li>2011~2012 Worked at a sottware developping company, as an Android app engineer </li>
+  <li>2012~2016 Worked at social game platform company<ul>
+      <li>Android app developer -&gt; Game develop engineer</li>
+    </ul>
+  </li>
+  <li>2016~2018 Worked at a software developping company<ul>
+      <li>Machine learning engineer / smartphone app development / smartphone game development / web system development</li>
+    </ul>
+  </li>
+  <li>2018~ Freelance</li>
+</ul>
+</body>
+
 </html>
-
