--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
 <p>An esoteric programming language</p>
 <h3 id="skills">Skills</h3>
 <ul>
-  <li>Application develop, in a broad sence<ul>
-      <li>Including software engineering, marketing and planning</li>
-    </ul>
-  </li>
+  <li>Software engineering
   <li>Machine learning / image processing</li>
   <li>Game design</li>
 </ul>
