--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body>
 
-</body>
 <h1 id="tackman-info">tackman.info</h1>
 <h3 id="about">About</h3>
 <p>Software engineer / Application developer / Game designer</p>
@@ -27,37 +26,36 @@
 <p>An esoteric programming language</p>
 <h3 id="skills">Skills</h3>
 <ul>
-  <li>Software engineering
-  <li>Machine learning / image processing</li>
-  <li>Game design</li>
+<li>Software enginnering</li>
+<li>Machine learning / image processing</li>
+<li>Game design</li>
 </ul>
 <h3 id="social">Social</h3>
 <ul>
-  <li>Mastodon <a href="htts://social.tackman.info/@tackman">@tackman@social.tackman.info</a></li>
-  <li>Twitter <a href="https://twitter.com/tackman/">@tackman</a></li>
-  <li>Github <a href="https://github.com/tackman/">https://github.com/tackman/</a></li>
+<li>Mastodon <a href="https://mastodon.tackman.info/@tackman">@tackman@mastodon.tackman.info</a></li>
+<li>Twitter <a href="https://twitter.com/tackman/">@tackman</a></li>
+<li>Github <a href="https://github.com/tackman/">https://github.com/tackman/</a></li>
 </ul>
 <h3 id="circles">Circles</h3>
 <ul>
-  <li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
-  <li><a href="https://off-box.net/">off-box</a> As a game designer and circle administrator</li>
-  <li><a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game Breakers. Participant as a writer.</li>
-  <li><a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of ボードゲームブレイカーズ</li>
+<li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
+<li><a href="https://off-box.net/">off-box</a> As a game designer and circle administrator</li>
+<li><a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game Breakers. Participant as a writer.</li>
+<li><a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of ボードゲームブレイカーズ</li>
 </ul>
 <h3 id="career">Career</h3>
 <ul>
-  <li>I&#39;ve graduated Department of Information and Communication Engineering, Tokyo Univ in 2011.</li>
-  <li>2011~2012 Worked at a sottware developping company, as an Android app engineer </li>
-  <li>2012~2016 Worked at social game platform company<ul>
-      <li>Android app developer -&gt; Game develop engineer</li>
-    </ul>
-  </li>
-  <li>2016~2018 Worked at a software developping company<ul>
-      <li>Machine learning engineer / smartphone app development / smartphone game development / web system development</li>
-    </ul>
-  </li>
-  <li>2018~ Freelance</li>
+<li>I&#39;ve graduated Department of Information and Communication Engineering, Tokyo Univ in 2011.</li>
+<li>2011~2012 Worked at a sottware developping company, as an Android app engineer </li>
+<li>2012~2016 Worked at social game platform company<ul>
+<li>Android app developer -&gt; Game develop engineer</li>
 </ul>
-</body>
+</li>
+<li>2016~2018 Worked at a software developping company<ul>
+<li>Machine learning engineer / smartphone app development / smartphone game development / web system development</li>
+</ul>
+</li>
+<li>2018~ Freelance</li>
+</ul></body>
 
 </html>
