--- a/index.html
+++ b/index.html
@@ -1,61 +1,145 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>tackman.info</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Abel"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/splendor.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>tackman.info</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
-  <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/splendor.css">
-</head>
-
-<body>
-
-<h1 id="tackman-info">tackman.info</h1>
-<h3 id="about">About</h3>
-<p>Software engineer / Application developer / Game designer</p>
-<h3 id="personal-works">Personal works</h3>
-<h4 id="-">百合紅 -ゆりくれ-</h4>
-<p>Yuri-Kure, 百合 board game. <a href="https://yurikure.wr-inst.org/">https://yurikure.wr-inst.org/</a></p>
-<p>Game scoring support tool <a href="https://yurikure.wr-inst.org/app/">https://yurikure.wr-inst.org/app/</a></p>
-<h4 id="-">プログラミング言語「うっうー」</h4>
-<p><a href="http://tackman.info/ut-u/">http://tackman.info/ut-u/</a></p>
-<p>An esoteric programming language</p>
-<h3 id="skills">Skills</h3>
-<ul>
-<li>Software enginnering</li>
-<li>Machine learning / image processing</li>
-<li>Game design</li>
-</ul>
-<h3 id="social">Social</h3>
-<ul>
-<li>Mastodon <a href="https://mastodon.tackman.info/@tackman">@tackman@mastodon.tackman.info</a></li>
-<li>Twitter <a href="https://twitter.com/tackman/">@tackman</a></li>
-<li>Github <a href="https://github.com/tackman/">https://github.com/tackman/</a></li>
-</ul>
-<h3 id="circles">Circles</h3>
-<ul>
-<li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
-<li><a href="https://off-box.net/">off-box</a> As a game designer and circle administrator</li>
-<li><a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game Breakers. Participant as a writer.</li>
-<li><a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of ボードゲームブレイカーズ</li>
-</ul>
-<h3 id="career">Career</h3>
-<ul>
-<li>I&#39;ve graduated Department of Information and Communication Engineering, Tokyo Univ in 2011.</li>
-<li>2011~2012 Worked at a sottware developping company, as an Android app engineer </li>
-<li>2012~2016 Worked at social game platform company<ul>
-<li>Android app developer -&gt; Game develop engineer</li>
-</ul>
-</li>
-<li>2016~2018 Worked at a software developping company<ul>
-<li>Machine learning engineer / smartphone app development / smartphone game development / web system development</li>
-</ul>
-</li>
-<li>2018~ Freelance</li>
-</ul></body>
-
+  <body>
+    <h1 id="tackman.info">tackman.info</h1>
+    <h2 id="about">About</h2>
+    <p>Software engineer / Application developer / Game designer</p>
+    <h2 id="personal-works">Personal works</h2>
+    <h3 id="百合紅--ゆりくれ-">
+      <a href="https://yurikure.wr-inst.org/">百合紅 -ゆりくれ-</a>
+    </h3>
+    <p>Yuri-Kure, 百合 board game.</p>
+    <ul>
+      <li>
+        Game scoring support tool https://yurikure.wr-inst.org/app/
+        <ul>
+          <li>Source: https://github.com/tackman/YurikureScoreApp</li>
+        </ul>
+      </li>
+    </ul>
+    <h3 id="hytouch">
+      <a href="https://github.com/tackman/HyTouch">HyTouch</a>
+    </h3>
+    <p>
+      Python local package manager / task runner, written in
+      <a href="http://hylang.org">Hy</a>
+    </p>
+    <h3 id="プログラミング言語うっうー">
+      <a href="http://tackman.info/ut-u/">プログラミング言語「うっうー」</a>
+    </h3>
+    <p>An esoteric programming language</p>
+    <h3 id="カタンおやつツール">
+      <a href="http://tackman.github.io/catantool/catan.html"
+        >カタンおやつツール</a
+      >
+    </h3>
+    <p>Catan (board game) auto map generator</p>
+    <h3 id="アリスの廻る世界">アリスの廻る世界</h3>
+    <p>(Published from Wright Flyers Inc. Seems now discontinued…)</p>
+    <h2 id="skills">Skills</h2>
+    <ul>
+      <li>Software engineering and programming</li>
+      <li>Machine learning / image processing</li>
+      <li><p>Game design and game programming</p></li>
+      <li>
+        Experienced in production:
+        <ul>
+          <li>
+            Programming languages: Scala / Kotlin / Java / JavaScript(ES6) / C#
+            / Python / PHP / C++
+          </li>
+          <li>
+            Platforms and frameworks: Unity / React.js / Vue.js / Nuxt.js /
+            Android application / MySQL / Firebase
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <h2 id="social">Social</h2>
+    <ul>
+      <li>Email tackman@tackman.info</li>
+      <li>
+        Mastodon
+        <span class="citation" data-cites="tackman"
+          >[@tackman@mastodon.tackman.info]</span
+        >(https://mastodon.tackman.info/<span
+          class="citation"
+          data-cites="tackman"
+          >@tackman</span
+        >)
+      </li>
+      <li>
+        Twitter
+        <span class="citation" data-cites="tackman">[@tackman]</span
+        >(https://twitter.com/tackman/)
+      </li>
+      <li>Github https://github.com/tackman/</li>
+      <li>Blog https://essay.tackman.info/</li>
+      <li>Qiita https://qiita.com/tackman</li>
+    </ul>
+    <h2 id="circles-dojin">Circles (dojin)</h2>
+    <ul>
+      <li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
+      <li>
+        <a href="https://off-box.net/">off-box</a> As a game designer and circle
+        administrator
+      </li>
+      <li>
+        <a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game
+        Breakers. Participant as a writer.
+      </li>
+      <li>
+        <a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of
+        ボードゲームブレイカーズ
+      </li>
+    </ul>
+    <h2 id="career">Career</h2>
+    <ul>
+      <li>
+        I’ve graduated Department of Information and Communication Engineering,
+        Tokyo Univ in 2011.
+      </li>
+      <li>
+        2011~2012 Worked at a software developing company, as an Android app
+        engineer
+      </li>
+      <li>
+        2012~2016 Worked at social game platform company
+        <ul>
+          <li>Android app developer -&gt; Game develop engineer</li>
+        </ul>
+      </li>
+      <li>
+        2016~2018 Worked at a software developing company
+        <ul>
+          <li>
+            Machine learning engineer / smartphone app development / smartphone
+            game development / web system development
+          </li>
+        </ul>
+      </li>
+      <li>2018~ Freelance</li>
+    </ul>
+    <p>“Democratizing creative activities” is what I am in pursuit of.</p>
+  </body>
 </html>
