--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
     <p>Yuri-Kure, 百合 board game.</p>
     <ul>
       <li>
-        Game scoring support tool https://yurikure.wr-inst.org/app/
+        <a href="https://yurikure.wr-inst.org/app/"
+          >Game scoring support tool</a
+        >
         <ul>
-          <li>Source: https://github.com/tackman/YurikureScoreApp</li>
+          <li>
+            <a href="https://github.com/tackman/YurikureScoreApp"
+              >Source(GitHub)</a
+            >
+          </li>
         </ul>
       </li>
     </ul>
@@ -56,25 +62,36 @@
     <p>Catan (board game) auto map generator</p>
     <h3 id="アリスの廻る世界">アリスの廻る世界</h3>
     <p>(Published from Wright Flyers Inc. Seems now discontinued…)</p>
+    <h3 id="量子ドミニオン">
+      <a href="https://tackman.booth.pm/items/1272485">量子ドミニオン</a>
+    </h3>
+    <p>
+      “Quantum Dominion”. MOD rule of Dominion(board game) to play in quantum
+      theory world.
+    </p>
     <h2 id="skills">Skills</h2>
     <ul>
       <li>Software engineering and programming</li>
       <li>Machine learning / image processing</li>
       <li><p>Game design and game programming</p></li>
       <li>
-        Experienced in production:
+        Experienced in:
         <ul>
-          <li>
-            Programming languages: Scala / Kotlin / Java / JavaScript(ES6) / C#
-            / Python / PHP / C++
-          </li>
-          <li>
-            Platforms and frameworks: Unity / React.js / Vue.js / Nuxt.js /
-            Android application / MySQL / Firebase
-          </li>
+          <li>Video game and application develop with Unity</li>
+          <li>Video &amp; board game design</li>
+          <li>Deep learning, specially in image generation with PyTorch</li>
+          <li>MLOps with Docker, TensorFlow.js</li>
+          <li>Android app develop with Java/Kotlin</li>
+          <li>Web system develop with Scala/AWS/micro services</li>
+          <li>Web frontend develop with React/Vue</li>
         </ul>
       </li>
     </ul>
+    <p>
+      “Democratizing creative activities” is what I am in pursuit of. Personal
+      interests depends on above purpose. Now I am interested in deep learning
+      to create artwork and to assist game designing.
+    </p>
     <h2 id="social">Social</h2>
     <ul>
       <li>Email tackman@tackman.info</li>
@@ -93,9 +110,9 @@
         <span class="citation" data-cites="tackman">[@tackman]</span
         >(https://twitter.com/tackman/)
       </li>
-      <li>Github https://github.com/tackman/</li>
-      <li>Blog https://essay.tackman.info/</li>
-      <li>Qiita https://qiita.com/tackman</li>
+      <li><a href="https://github.com/tackman/">Github</a></li>
+      <li><a href="https://essay.tackman.info/">Essay blog</a></li>
+      <li><a href="https://qiita.com/tackman">Qiita</a></li>
     </ul>
     <h2 id="circles-dojin">Circles (dojin)</h2>
     <ul>
@@ -116,8 +133,8 @@
     <h2 id="career">Career</h2>
     <ul>
       <li>
-        I’ve graduated Department of Information and Communication Engineering,
-        Tokyo Univ in 2011.
+        Graduated Department of Information and Communication Engineering, The
+        University of Tokyo in 2011.
       </li>
       <li>
         2011~2012 Worked at a software developing company, as an Android app
@@ -140,6 +157,5 @@
       </li>
       <li>2018~ Freelance</li>
     </ul>
-    <p>“Democratizing creative activities” is what I am in pursuit of.</p>
   </body>
 </html>
