updates including 2020 activities

--- a/index.html
+++ b/index.html
@@ -1,161 +1,112 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>tackman.info</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Abel"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/splendor.css" />
-  </head>
+    <html>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <title>tackman.info</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link
+        href="https://fonts.googleapis.com/css?family=Abel"
+        rel="stylesheet"
+      />
+      <link
+        href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
+        rel="stylesheet"
+      />
+      <link
+        href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css"
+        rel="stylesheet"
+      />
+      <link rel="stylesheet" href="css/splendor.css" />    
+    </head>
+    <body class="vscode-body vscode-light">
+        <h1 id="tackmaninfo"><a href="http://tackman.info">tackman.info</a></h1>
+<h2 id="about">About</h2>
+<p>Software engineer / Application developer / Game designer</p>
+<h2 id="personal-works">Personal works</h2>
+<h3 id="百合紅--ゆりくれ-"><a href="https://yurikure.wr-inst.org/">百合紅 -ゆりくれ-</a></h3>
+<p>Yuri-Kure, 百合 board game.</p>
+<ul>
+<li><a href="https://yurikure.wr-inst.org/app/">Game scoring support tool</a>
+<ul>
+<li><a href="https://github.com/tackman/YurikureScoreApp">Source(GitHub)</a></li>
+</ul>
+</li>
+</ul>
+<h3 id="hyショートイントロブック"><a href="https://booth.pm/ja/items/1570502">Hyショートイントロブック</a></h3>
+<p>A short introduction book for the Lisp-on-Python programming language <a href="https://docs.hylang.org/en/stable/">Hy</a></p>
+<h3 id="プログラミング言語うっうー"><a href="http://tackman.info/ut-u/">プログラミング言語「うっうー」</a></h3>
+<p>An esoteric programming language</p>
+<h3 id="カタンおやつツール"><a href="http://tackman.github.io/catantool/catan.html">カタンおやつツール</a></h3>
+<p>Catan (board game) auto map generator</p>
+<h3 id="アリスの廻る世界">アリスの廻る世界</h3>
+<p>(Published from Wright Flyers Inc. Seems now discontinued...)</p>
+<h3 id="量子ドミニオン"><a href="https://tackman.booth.pm/items/1272485">量子ドミニオン</a></h3>
+<p>&quot;Quantum Dominion&quot;. MOD rule of Dominion(board game) to play in quantum theory world.</p>
+<h2 id="skills">Skills</h2>
+<ul>
+<li>
+<p>Software engineering and programming</p>
+</li>
+<li>
+<p>Machine learning / image processing</p>
+</li>
+<li>
+<p>Game design and game programming</p>
+</li>
+<li>
+<p>Experienced in:</p>
+<ul>
+<li>Deep learning, specially in content(image etc) generation</li>
+<li>Web application develop on Firebase/GCP</li>
+<li>Web system develop with Scala/AWS/micro services</li>
+<li>Web frontend develop with React</li>
+<li>Video &amp; board game design</li>
+<li>Video game and application develop with Unity</li>
+<li>Android app develop with Java/Kotlin</li>
+</ul>
+</li>
+</ul>
+<p>&quot;Democratizing creative activities&quot; is what I am in pursuit of. Personal interests depends on above purpose. Now I am interested in deep learning to create artwork and to assist game designing.</p>
+<h2 id="social">Social</h2>
+<ul>
+<li>Email <a href="mailto:tackman@tackman.info">tackman@tackman.info</a></li>
+<li>Twitter <a href="https://twitter.com/tackman/">@tackman</a></li>
+<li><a href="https://github.com/tackman/">Github</a></li>
+<li><a href="https://zenn.dev/tkmn">zenn</a></li>
+<li>Mastodon <a href="https://mastodon.tackman.info/@tackman">@tackman@mastodon.tackman.info</a></li>
+</ul>
+<h2 id="circles-dojin">Circles (dojin)</h2>
+<ul>
+<li><a href="https://tackman.booth.pm/">BOOTH</a></li>
+<li><a href="https://tackman.fanbox.cc/">fanbox</a></li>
+<li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
+<li><a href="https://off-box.net/">off-box</a> As a game designer and circle administrator</li>
+<li><a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game Breakers. Participant as a writer.</li>
+<li><a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of ボードゲームブレイカーズ</li>
+</ul>
+<h2 id="career">Career</h2>
+<ul>
+<li>2020 Content auto generating research project member
+<ul>
+<li>Experiments with generative deep leranings (GANs, VAE etc)</li>
+<li>MLOps engineering ong GCP/Firebase stacks</li>
+</ul>
+</li>
+<li>2019 Web frontend developer using React</li>
+<li>2018~ Freelance</li>
+<li>2016~2018 Worked at a software developing company
+<ul>
+<li>Machine learning engineer / smartphone app development / smartphone game development / web system development</li>
+</ul>
+</li>
+<li>2012~2016 Worked at social game platform company
+<ul>
+<li>Android app developer -&gt; Game develop engineer</li>
+</ul>
+</li>
+<li>2011~2012 Worked at a software developing company, as an Android app engineer</li>
+<li>2011 Graduated Department of Information and Communication Engineering, The University of Tokyo</li>
+</ul>
 
-  <body>
-    <h1 id="tackman.info">tackman.info</h1>
-    <h2 id="about">About</h2>
-    <p>Software engineer / Application developer / Game designer</p>
-    <h2 id="personal-works">Personal works</h2>
-    <h3 id="百合紅--ゆりくれ-">
-      <a href="https://yurikure.wr-inst.org/">百合紅 -ゆりくれ-</a>
-    </h3>
-    <p>Yuri-Kure, 百合 board game.</p>
-    <ul>
-      <li>
-        <a href="https://yurikure.wr-inst.org/app/"
-          >Game scoring support tool</a
-        >
-        <ul>
-          <li>
-            <a href="https://github.com/tackman/YurikureScoreApp"
-              >Source(GitHub)</a
-            >
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="hytouch">
-      <a href="https://github.com/tackman/HyTouch">HyTouch</a>
-    </h3>
-    <p>
-      Python local package manager / task runner, written in
-      <a href="http://hylang.org">Hy</a>
-    </p>
-    <h3 id="プログラミング言語うっうー">
-      <a href="http://tackman.info/ut-u/">プログラミング言語「うっうー」</a>
-    </h3>
-    <p>An esoteric programming language</p>
-    <h3 id="カタンおやつツール">
-      <a href="http://tackman.github.io/catantool/catan.html"
-        >カタンおやつツール</a
-      >
-    </h3>
-    <p>Catan (board game) auto map generator</p>
-    <h3 id="アリスの廻る世界">アリスの廻る世界</h3>
-    <p>(Published from Wright Flyers Inc. Seems now discontinued…)</p>
-    <h3 id="量子ドミニオン">
-      <a href="https://tackman.booth.pm/items/1272485">量子ドミニオン</a>
-    </h3>
-    <p>
-      “Quantum Dominion”. MOD rule of Dominion(board game) to play in quantum
-      theory world.
-    </p>
-    <h2 id="skills">Skills</h2>
-    <ul>
-      <li>Software engineering and programming</li>
-      <li>Machine learning / image processing</li>
-      <li><p>Game design and game programming</p></li>
-      <li>
-        Experienced in:
-        <ul>
-          <li>Video game and application develop with Unity</li>
-          <li>Video &amp; board game design</li>
-          <li>Deep learning, specially in image generation with PyTorch</li>
-          <li>MLOps with Docker, TensorFlow.js</li>
-          <li>Android app develop with Java/Kotlin</li>
-          <li>Web system develop with Scala/AWS/micro services</li>
-          <li>Web frontend develop with React/Vue</li>
-        </ul>
-      </li>
-    </ul>
-    <p>
-      “Democratizing creative activities” is what I am in pursuit of. Personal
-      interests depends on above purpose. Now I am interested in deep learning
-      to create artwork and to assist game designing.
-    </p>
-    <h2 id="social">Social</h2>
-    <ul>
-      <li>Email tackman@tackman.info</li>
-      <li>
-        Mastodon
-        <span class="citation" data-cites="tackman"
-          >[@tackman@mastodon.tackman.info]</span
-        >(https://mastodon.tackman.info/<span
-          class="citation"
-          data-cites="tackman"
-          >@tackman</span
-        >)
-      </li>
-      <li>
-        Twitter
-        <span class="citation" data-cites="tackman">[@tackman]</span
-        >(https://twitter.com/tackman/)
-      </li>
-      <li><a href="https://github.com/tackman/">Github</a></li>
-      <li><a href="https://essay.tackman.info/">Essay blog</a></li>
-      <li><a href="https://qiita.com/tackman">Qiita</a></li>
-    </ul>
-    <h2 id="circles-dojin">Circles (dojin)</h2>
-    <ul>
-      <li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
-      <li>
-        <a href="https://off-box.net/">off-box</a> As a game designer and circle
-        administrator
-      </li>
-      <li>
-        <a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game
-        Breakers. Participant as a writer.
-      </li>
-      <li>
-        <a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of
-        ボードゲームブレイカーズ
-      </li>
-    </ul>
-    <h2 id="career">Career</h2>
-    <ul>
-      <li>
-        Graduated Department of Information and Communication Engineering, The
-        University of Tokyo in 2011.
-      </li>
-      <li>
-        2011~2012 Worked at a software developing company, as an Android app
-        engineer
-      </li>
-      <li>
-        2012~2016 Worked at social game platform company
-        <ul>
-          <li>Android app developer -&gt; Game develop engineer</li>
-        </ul>
-      </li>
-      <li>
-        2016~2018 Worked at a software developing company
-        <ul>
-          <li>
-            Machine learning engineer / smartphone app development / smartphone
-            game development / web system development
-          </li>
-        </ul>
-      </li>
-      <li>2018~ Freelance</li>
-    </ul>
-  </body>
-</html>
+    </body>
+    </html>
