add Google form

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
 <li>Twitter <a href="https://twitter.com/tackman/">@tackman</a></li>
 <li><a href="https://github.com/tackman/">Github</a></li>
 <li><a href="https://zenn.dev/tkmn">zenn</a></li>
-<li>Mastodon <a href="https://mastodon.tackman.info/@tackman">@tackman@mastodon.tackman.info</a></li>
 </ul>
 <h2 id="circles-dojin">Circles (dojin)</h2>
 <ul>
@@ -108,5 +107,8 @@
 <li>2011 Graduated Department of Information and Communication Engineering, The University of Tokyo</li>
 </ul>
 
+<div style="text-align: center; width: 100%;">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScC94FiJjC6hzSZBz0Il9YN47zLBcfnBzjUFtZ6ege5Tcr5GQ/viewform?embedded=true" width="640" height="671" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+</div>
     </body>
     </html>
