--- a/index.html
+++ b/index.html
@@ -23,33 +23,18 @@
   <body>
     <h1 id="tackman.info">tackman.info</h1>
     <h2 id="about">About</h2>
-    <p>Software engineer / Application developer / Game designer</p>
+    <p>Software engineer / Game designer</p>
     <h2 id="personal-works">Personal works</h2>
     <h3 id="百合紅--ゆりくれ-">
       <a href="https://yurikure.wr-inst.org/">百合紅 -ゆりくれ-</a>
     </h3>
     <p>Yuri-Kure, 百合 board game.</p>
-    <ul>
-      <li>
-        <a href="https://yurikure.wr-inst.org/app/"
-          >Game scoring support tool</a
-        >
-        <ul>
-          <li>
-            <a href="https://github.com/tackman/YurikureScoreApp"
-              >Source(GitHub)</a
-            >
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <h3 id="hytouch">
-      <a href="https://github.com/tackman/HyTouch">HyTouch</a>
+    <h3>
+      <a href="https://tackman.booth.pm/items/5803665" target="_blank">世界の競馬場 vol.1</a>
     </h3>
-    <p>
-      Python local package manager / task runner, written in
-      <a href="http://hylang.org">Hy</a>
-    </p>
+    <h3>
+      <a href="https://www.4gamer.net/words/017/W01768/" target="_blank">4Gamer.netへの寄稿記事</a>
+    </h3>
     <h3 id="プログラミング言語うっうー">
       <a href="http://tackman.info/ut-u/">プログラミング言語「うっうー」</a>
     </h3>
@@ -72,62 +57,37 @@
     <h2 id="skills">Skills</h2>
     <ul>
       <li>Software engineering and programming</li>
-      <li>Machine learning / image processing</li>
-      <li><p>Game design and game programming</p></li>
+      <li>Machine learning</li>
+      <li>Board game design</li>
       <li>
         Experienced in:
         <ul>
+          <li>Machine learning projects / R&D, MLOps and application develop</li>
+          <li>Web application develop / devops</li>
           <li>Video game and application develop with Unity</li>
-          <li>Video &amp; board game design</li>
-          <li>Deep learning, specially in image generation with PyTorch</li>
-          <li>MLOps with Docker, TensorFlow.js</li>
-          <li>Android app develop with Java/Kotlin</li>
-          <li>Web system develop with Scala/AWS/micro services</li>
-          <li>Web frontend develop with React/Vue</li>
+          <li>Board game design and producing</li>
         </ul>
       </li>
     </ul>
     <p>
-      “Democratizing creative activities” is what I am in pursuit of. Personal
-      interests depends on above purpose. Now I am interested in deep learning
-      to create artwork and to assist game designing.
+      Seeking to advance creative activities through technology.
     </p>
     <h2 id="social">Social</h2>
     <ul>
       <li>Email tackman@tackman.info</li>
-      <li>
-        Mastodon
-        <span class="citation" data-cites="tackman"
-          >[@tackman@mastodon.tackman.info]</span
-        >(https://mastodon.tackman.info/<span
-          class="citation"
-          data-cites="tackman"
-          >@tackman</span
-        >)
-      </li>
-      <li>
-        Twitter
-        <span class="citation" data-cites="tackman">[@tackman]</span
-        >(https://twitter.com/tackman/)
-      </li>
-      <li><a href="https://github.com/tackman/">Github</a></li>
-      <li><a href="https://essay.tackman.info/">Essay blog</a></li>
-      <li><a href="https://qiita.com/tackman">Qiita</a></li>
+      <li><a href="https://linktr.ee/tackman" target="_blank">Links in linktree</a>
     </ul>
     <h2 id="circles-dojin">Circles (dojin)</h2>
     <ul>
-      <li><a href="https://wr-inst.org/">世界革命研究所</a> Personal circle</li>
       <li>
-        <a href="https://off-box.net/">off-box</a> As a game designer and circle
+        <a href="https://off-box.net/" target="_blank">off-box</a> As a game designer and circle
         administrator
       </li>
+      <li><a href="http://36cprincess.tackman.info/" target="_blank">36c princess</a> Personal circle</li>
+      <li><a href="https://twitter.com/im_karton" target="_blank">Im Karton</a> Visit world board game events and write articles.</li>
       <li>
-        <a href="http://bgb.cards/">ボードゲームブレイカーズ</a> Board Game
+        <a href="http://bgb.cards/" target="_blank">ボードゲームブレイカーズ</a> Board Game
         Breakers. Participant as a writer.
-      </li>
-      <li>
-        <a href="http://civbgeeks.net/">CivBGeeks</a> Predecessor of
-        ボードゲームブレイカーズ
       </li>
     </ul>
     <h2 id="career">Career</h2>
