--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <h2 id="career">Career</h2>
     <ul>
       <li>2024 Smartphone app develop as a web frontend engineer</li>
-      <li>2023 Auth system desigin/arhcitect</li>
+      <li>2023 Auth system desigin/architect</li>
       <li>2022 Image recognition and AI suggestion application</li>
       <li>2021-2023 Machine learining engineering in EC service</li>
       <li>
